--- a/index.html
+++ b/index.html
@@ -1,86 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBSTUDIO</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WebStudio</title>
 </head>
-
 <body>
-   <header class="header"> 
-    <nav class="header__nav"> 
-        <a class="logo-dark" href="/index.html"><span class="logo-dark-span">Web</span> Studio</a>
-        <ul class="element">
-            <li> <a  class="studio" href="#"> Studio </a> </li>
-            <li> <a  class="portfolio" href="#" > Portfolio </a> </li>
-            <li> <a  class="contacts" href="#"> Contacts </a> </li>
-        </ul>
-        </nav>
+  <header>
+    <nav>
+     
+      <a href="./index.html">WebStudio</a>
     
-        <address class="header__contacts"> 
-            <a href="mailto: info@devstudio.com" class="mailto"> info@devstudio.com </a>
-            <a href="tel:+11 (000) 111-11-11" class="tel"> +11 (000) 111-11-11 </a>
-             </address>
-            </header>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
+      </ul>
+    </nav>
 
-            <main>
-                <section class="order">
-                <h1> Effective Solutions for Your Business </h1>
-                <button type="button"> Order Service </button>
-                </section>
+   
+    <address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
+    </address>
+  </header>
 
-                <section class="features"> 
-                <ul class="features__list"> 
-                    <li class="features__item--1"> <h3>Strategy</h3>
-                         <p> Our goal is to identify the business
-                                problem to walk away with the perfect and creative solution. </p>
-                    </li>
-                    <li class="features__item--2"> <h3>Punctuality</h3>
-                         <p> Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
-                    </li>
-                     <li class="features__item--3"> <h3>Diligence</h3>
-                         <p> Research and confirm brands with the strongest digital growth opportunities and minimize risk. </p>
-                    </li>
-                     <li class="features__item--4"> <h3>Technologies</h3>
-                         <p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
-                    </li>
-                </ul>
-                </section>
+  <main>
+  
+    <section class="order">
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+    </section>
 
-                <section class="ourteam"> 
-                <h2>Our Team</h2>
-                <ul>
-                    <li>
-                        <img src="./images/img-3.jpg" alt="Mark Guerrero, Product Designer" width="260" height="264">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
-                    </li>
+ 
+    <section class="features">
+      <h2>Features</h2>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </li>
+      </ul>
+    </section>
 
-                     <li>
-                        <img src="./images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="260" height="264">
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
-                    </li>
+ 
+    <section class="ourteam">
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img src="./images/img-3.jpg" alt="Mark Guerrero, Product Designer" width="264">
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="264">
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/img-1.jpg" alt="Camila Garcia, Marketing" width="264">
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/img.jpg" alt="Daniel Wilson, UI Designer" width="264">
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
 
-                    <li>
-                        <img src="./images/img-1.jpg" alt="Camila Garcia, Marketing" width="260" height="264">
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
-                    </li>
-
-                     <li>
-                        <img src="./images/img.jpg" alt="Daniel Wilson, UI Designer" width="260" height="264">
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
-                    </li>
-                </ul>
-                </section>
-            </main>
-
-            <footer>
-                <a href="/index.html" class="logo-dark"><span class="logo-dark-span">Web</span>Studio</a>
-                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            </footer>
-
+  <footer>
+    <a href="./index.html">WebStudio</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  </footer>
 </body>
 </html>
